force-app/main/default/objects/Program_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Academic Program this Program Plan is for, for example, BA in Philosophy.</description>
    <inlineHelpText>The Academic Program this Program Plan is for, for example, BA in Philosophy.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>