force-app/main/default/objects/Program_Plan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of Program Plan.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>