force-app/main/default/objects/Program_Plan__c/fields/Total_Required_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Required_Credits__c</fullName>
    <description>The total number of credits a student needs to complete to satisfy this Program Plan.</description>
    <inlineHelpText>The total number of credits a student needs to complete to satisfy this Program Plan.</inlineHelpText>
    <label>Total Required Credits</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>