force-app/main/default/objects/Program_Plan__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The version of the Program Plan, for example, Spring 2020.</description>
    <inlineHelpText>The version of the Program Plan, for example, Spring 2020.</inlineHelpText>
    <label>Version</label>
    <length>25</length>
    <type>Text</type>
</CustomField>