force-app/main/default/objects/Program_Plan__c/listViews/Primary_Program_Plan.listView-meta.xml
<ListView>
    <fullName>Primary_Program_Plan</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Is_Primary__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Primary__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Primary Program Plans</label>
</ListView>